--- a/index.html
+++ b/index.html
@@ -1,37 +1,402 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>MINISTER MARK - Offline Holy Bible</title>
-    <meta name="description" content="MINISTER MARK - Your offline companion for reading the Holy Bible. Access Scripture anywhere, anytime without an internet connection." />
-    <meta name="author" content="Minister Mark" />
-    <meta name="theme-color" content="#1a2332" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="MINISTER MARK" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Instagram login · frontend clone</title>
+  <!-- Font Awesome 5 (free) for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <!-- Grand Hotel font for the Instagram wordmark (similar style) -->
+  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+  <style>
+    /* RESET & BASE */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="MINISTER MARK - Offline Holy Bible" />
-    <meta property="og:description" content="Your offline companion for reading the Holy Bible. Access Scripture anywhere, anytime." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/icons/icon-512x512.png" />
+    body {
+      background-color: #fafafa;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MINISTER MARK - Offline Holy Bible" />
-    <meta name="twitter:description" content="Your offline companion for reading the Holy Bible." />
-    <meta name="twitter:image" content="/icons/icon-512x512.png" />
+    /* main container – flex row for left phone + right forms */
+    .container {
+      max-width: 935px;
+      margin: 32px auto 0;
+      padding: 0 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 32px;
+      flex: 1;
+    }
 
-    <!-- PWA -->
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-72x72.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-72x72.png" />
-  </head>
+    /* ---------- LEFT SIDE: phone mockup ---------- */
+    .left {
+      flex-shrink: 0;
+      display: flex;
+      justify-content: center;
+    }
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    .phone-mock {
+      width: 280px;               /* slightly wider for better proportions */
+    }
+
+    .phone-frame {
+      background: #111;
+      border-radius: 44px;
+      padding: 14px 8px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.12), 0 4px 12px rgba(0, 0, 0, 0.08);
+      border: 1px solid #3a3a3a;
+    }
+
+    .phone-screen {
+      background: #fff;
+      border-radius: 34px;
+      overflow: hidden;
+      height: 490px;              /* 16:9-ish proportion */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .phone-screen img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    /* small camera / sensor row (cosmetic) */
+    .phone-notch {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin: 12px 0 6px;
+    }
+
+    .phone-notch span {
+      width: 12px;
+      height: 12px;
+      background: #2e2e2e;
+      border-radius: 50%;
+    }
+
+    .phone-notch span:first-child {
+      width: 40px;
+      border-radius: 20px;
+      background: #1f1f1f;
+    }
+
+    .home-indicator {
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: #222;
+      margin: 8px auto 2px;
+    }
+
+    /* ---------- RIGHT SIDE: login cards + footer ---------- */
+    .right {
+      width: 350px;
+    }
+
+    /* shared card style */
+    .login-card, .signup-card {
+      background: #ffffff;
+      border: 1px solid #dbdbdb;
+      border-radius: 4px;
+      margin-bottom: 12px;
+    }
+
+    .login-card {
+      padding: 40px 40px 30px;
+    }
+
+    .signup-card {
+      padding: 22px 40px;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    /* instagram wordmark */
+    .logo {
+      font-family: 'Grand Hotel', cursive;
+      font-size: 48px;
+      font-weight: 400;
+      text-align: center;
+      margin-bottom: 30px;
+      color: #262626;
+      letter-spacing: 0.5px;
+    }
+
+    /* form elements */
+    .login-card form input {
+      width: 100%;
+      background: #fafafa;
+      border: 1px solid #dbdbdb;
+      border-radius: 4px;
+      padding: 9px 8px;
+      font-size: 12px;
+      margin-bottom: 8px;
+      outline: none;
+    }
+
+    .login-card form input:focus {
+      border-color: #a8a8a8;
+    }
+
+    .login-btn {
+      width: 100%;
+      background: #0095f6;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 7px 16px;
+      font-weight: 600;
+      font-size: 14px;
+      margin: 12px 0 18px;
+      cursor: pointer;
+      transition: background 0.1s;
+    }
+
+    .login-btn:hover {
+      background: #1877f2;
+    }
+
+    /* OR separator */
+    .separator {
+      display: flex;
+      align-items: center;
+      color: #8e8e8e;
+      font-size: 13px;
+      font-weight: 600;
+      margin: 10px 0 18px;
+    }
+
+    .line {
+      flex: 1;
+      height: 1px;
+      background: #dbdbdb;
+    }
+
+    .separator span {
+      margin: 0 18px;
+    }
+
+    /* facebook login link */
+    .fb-login {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      color: #385185;
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 14px;
+      margin-bottom: 18px;
+    }
+
+    .fb-login i {
+      font-size: 20px;
+    }
+
+    .forgot-password {
+      display: block;
+      text-align: center;
+      color: #00376b;
+      font-size: 12px;
+      text-decoration: none;
+    }
+
+    .forgot-password:hover {
+      text-decoration: underline;
+    }
+
+    .signup-card a {
+      color: #0095f6;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .signup-card a:hover {
+      text-decoration: underline;
+    }
+
+    /* app download section */
+    .app-download {
+      text-align: center;
+      margin: 20px 0 30px;
+    }
+
+    .app-download p {
+      font-size: 14px;
+      margin-bottom: 16px;
+      color: #262626;
+    }
+
+    .badges {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .badge {
+      background: #000;
+      color: white;
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-size: 13px;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      font-weight: 500;
+      transition: opacity 0.2s;
+    }
+
+    .badge i {
+      font-size: 18px;
+    }
+
+    .badge:hover {
+      opacity: 0.85;
+    }
+
+    /* footer with links */
+    .footer {
+      max-width: 935px;
+      margin: 0 auto 40px;
+      padding: 0 20px;
+      text-align: center;
+      color: #8e8e8e;
+      font-size: 12px;
+    }
+
+    .footer ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 12px 18px;
+      margin-bottom: 18px;
+    }
+
+    .footer ul li a {
+      color: #8e8e8e;
+      text-decoration: none;
+      font-weight: 400;
+    }
+
+    .footer ul li a:hover {
+      text-decoration: underline;
+    }
+
+    .footer div {
+      margin-top: 8px;
+    }
+
+    /* responsive: hide left phone on smaller screens */
+    @media (max-width: 820px) {
+      .left {
+        display: none;
+      }
+    }
+
+    @media (max-width: 450px) {
+      .right {
+        width: 100%;
+      }
+      .login-card, .signup-card {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- LEFT: PHONE MOCKUP WITH SAMPLE SCREENSHOT -->
+    <div class="left">
+      <div class="phone-mock">
+        <div class="phone-frame">
+          <div class="phone-screen">
+            <!-- free image from Picsum (ID 100) – camera related, looks like a photo stream -->
+            <img src="https://picsum.photos/id/100/280/490" alt="Instagram feed preview">
+          </div>
+          <div class="phone-notch">
+            <span></span>
+            <span></span>
+          </div>
+          <div class="home-indicator"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- RIGHT: LOGIN CARD + SIGNUP + APP BADGES -->
+    <div class="right">
+      <!-- main login box -->
+      <div class="login-card">
+        <h1 class="logo">Instagram</h1>
+
+        <form>
+          <input type="text" placeholder="Phone number, username, or email">
+          <input type="password" placeholder="Password">
+          <button type="submit" class="login-btn">Log in</button>
+        </form>
+
+        <div class="separator">
+          <div class="line"></div>
+          <span>OR</span>
+          <div class="line"></div>
+        </div>
+
+        <a href="#" class="fb-login">
+          <i class="fab fa-facebook-square"></i> Log in with Facebook
+        </a>
+
+        <a href="#" class="forgot-password">Forgot password?</a>
+      </div>
+
+      <!-- sign up callout -->
+      <div class="signup-card">
+        Don't have an account? <a href="#">Sign up</a>
+      </div>
+
+      <!-- app download badges -->
+      <div class="app-download">
+        <p>Get the app.</p>
+        <div class="badges">
+          <a href="#" class="badge"><i class="fab fa-apple"></i> App Store</a>
+          <a href="#" class="badge"><i class="fab fa-google-play"></i> Google Play</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- FOOTER LINKS (mimicking Instagram) -->
+  <footer class="footer">
+    <ul>
+      <li><a href="#">Meta</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Help</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Locations</a></li>
+      <li><a href="#">Instagram Lite</a></li>
+      <li><a href="#">Threads</a></li>
+      <li><a href="#">Contact Uploading & Non-Users</a></li>
+      <li><a href="#">Meta Verified</a></li>
+    </ul>
+    <div>English © 2025 Instagram from Meta</div>
+  </footer>
+</body>
 </html>
